Update calculation of country-level data and of weighted SLAND

--- a/Scripts1_DataPreparation_NaturalSink_TrendyDGVMs/Prep1_Calc_SLAND_vLatLon_Trendy-v10.ipynb
+++ b/Scripts1_DataPreparation_NaturalSink_TrendyDGVMs/Prep1_Calc_SLAND_vLatLon_Trendy-v10.ipynb
@@ -41,16 +41,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dir_trendy    = '/Trendy/Data/'\n",
-    "dir_data_orig = '/Trendy/Data/Trendy-v10_' + experiment + '/'\n",
-    "dir_data_corr = '/Trendy/Data/Trendy-v10_' + experiment + '_corr/'\n",
-    "dir_countries = '/Trendy/Data/data_ancillary/info_countries/'\n",
-    "dir_forest    = '/GCB2021_commentary/Data/forest_masks/'\n",
-    "dir_LSMs      = '/Trendy/Data/LSMs_Trendy-v10/LSMs_unified/'\n",
-    "dir_LSMs_out  = '/Trendy/Data/LSMs_Trendy-v10/'\n",
-    "dir_tmp       = '/Trendy/Data/tmp/'\n",
-    "dir_grids     = '/Trendy/Data/grids/'\n",
-    "dir_out       = '/Trendy/Data/SLAND_Trendy-v10_' + experiment + '_LatLon/'\n",
+    "dir_trendy    = '/Data/'\n",
+    "dir_data_orig = '/Data/Trendy-v10_' + experiment + '/'\n",
+    "dir_data_corr = '/Data/Trendy-v10_' + experiment + '_corr/'\n",
+    "dir_countries = '/Data/data_ancillary/info_countries/'\n",
+    "dir_forest    = '/Data/forest_masks/'\n",
+    "dir_LSMs      = '/Data/LSMs_Trendy-v10/LSMs_unified/'\n",
+    "dir_LSMs_out  = '/Data/LSMs_Trendy-v10/'\n",
+    "dir_tmp       = '/Data/tmp/'\n",
+    "dir_grids     = '/Data/grids/'\n",
+    "dir_out       = '/Data/SLAND_Trendy-v10_' + experiment + '_LatLon/'\n",
     "if not os.path.exists(dir_out):  os.mkdir(dir_out)\n",
     "    "
    ]
