--- a/Scripts1_DataPreparation_NaturalSink_TrendyDGVMs/Prep2a_Calc_ForestFraction_vLatLon_Trendy.ipynb
+++ b/Scripts1_DataPreparation_NaturalSink_TrendyDGVMs/Prep2a_Calc_ForestFraction_vLatLon_Trendy.ipynb
@@ -41,21 +41,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dir_data_v8_orig  = '/Trendy/Data/Trendy-v8_' + experiment + '/'\n",
-    "dir_data_v9_orig  = '/Trendy/Data/Trendy-v9_' + experiment + '/'\n",
-    "dir_data_v10_orig = '/Trendy/Data/Trendy-v10_' + experiment + '/'\n",
-    "dir_data_v8_corr  = '/Trendy/Data/Trendy-v8_' + experiment + '_corr/'\n",
-    "dir_data_v9_corr  = '/Trendy/Data/Trendy-v9_' + experiment + '_corr/'\n",
-    "dir_data_v10_corr = '/Trendy/Data/Trendy-v10_' + experiment + '_corr/'\n",
-    "dir_forest        = '/GCB2021_commentary/Data/forest_masks/'\n",
-    "dir_tmp           = '/Trendy/Data/tmp/'\n",
-    "dir_grids         = '/Trendy/Data/grids/'\n",
-    "dir_out_v8        = '/Trendy/Data/SLAND_Trendy-v8_' + experiment + '_LatLon/'\n",
-    "dir_out_v9        = '/Trendy/Data/SLAND_Trendy-v9_' + experiment + '_LatLon/'\n",
-    "dir_out_v10       = '/Trendy/Data/SLAND_Trendy-v10_' + experiment + '_LatLon/'\n",
-    "if not os.path.exists(dir_out_v8):   os.mkdir(dir_out_v8)\n",
-    "if not os.path.exists(dir_out_v9):   os.mkdir(dir_out_v9)\n",
-    "if not os.path.exists(dir_out_v10):  os.mkdir(dir_out_v10)\n"
+    "dir_data_v8_orig  = '/Data/Trendy-v8_' + experiment + '/'\n",
+    "dir_data_v9_orig  = '/Data/Trendy-v9_' + experiment + '/'\n",
+    "dir_data_v10_orig = '/Data/Trendy-v10_' + experiment + '/'\n",
+    "dir_data_v8_corr  = '/Data/Trendy-v8_' + experiment + '_corr/'\n",
+    "dir_data_v9_corr  = '/Data/Trendy-v9_' + experiment + '_corr/'\n",
+    "dir_data_v10_corr = '/Data/Trendy-v10_' + experiment + '_corr/'\n",
+    "dir_forest        = '/Data/forest_masks/'\n",
+    "dir_tmp           = '/Data/tmp/'\n",
+    "dir_grids         = '/Data/grids/'\n",
+    "dir_out_v8        = '/Data/SLAND_Trendy-v8_' + experiment + '_LatLon/'\n",
+    "dir_out_v9        = '/Data/SLAND_Trendy-v9_' + experiment + '_LatLon/'\n",
+    "dir_out_v10       = '/Data/SLAND_Trendy-v10_' + experiment + '_LatLon/'\n"
    ]
   },
   {
