--- a/Scripts1_DataPreparation_NaturalSink_TrendyDGVMs/Prep2b_Calculate_forest_weight.ipynb
+++ b/Scripts1_DataPreparation_NaturalSink_TrendyDGVMs/Prep2b_Calculate_forest_weight.ipynb
@@ -13,8 +13,7 @@
     "import cftime\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "import cartopy.crs as ccrs\n",
-    "import mplotutils as mpu\n"
+    "import cartopy.crs as ccrs\n"
    ]
   },
   {
@@ -24,14 +23,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dir_trendy_v8_S2  = '/Trendy/Data/SLAND_Trendy-v8_S2_LatLon/'\n",
-    "dir_trendy_v8_S3  = '/Trendy/Data/SLAND_Trendy-v8_S3_LatLon/'\n",
-    "dir_trendy_v9_S2  = '/Trendy/Data/SLAND_Trendy-v9_S2_LatLon/'\n",
-    "dir_trendy_v9_S3  = '/Trendy/Data/SLAND_Trendy-v9_S3_LatLon/'\n",
-    "dir_trendy_v10_S2 = '/Trendy/Data/SLAND_Trendy-v10_S2_LatLon/'\n",
-    "dir_trendy_v10_S3 = '/Trendy/Data/SLAND_Trendy-v10_S3_LatLon/'\n",
-    "dir_forest        = '/GCB2021_commentary/Data/forest_masks/'\n",
-    "dir_fig           = '/GCB2021_commentary/Figures/'\n"
+    "dir_trendy_v8_S2  = '/Data/SLAND_Trendy-v8_S2_LatLon/'\n",
+    "dir_trendy_v8_S3  = '/Data/SLAND_Trendy-v8_S3_LatLon/'\n",
+    "dir_trendy_v9_S2  = '/Data/SLAND_Trendy-v9_S2_LatLon/'\n",
+    "dir_trendy_v9_S3  = '/Data/SLAND_Trendy-v9_S3_LatLon/'\n",
+    "dir_trendy_v10_S2 = '/Data/SLAND_Trendy-v10_S2_LatLon/'\n",
+    "dir_trendy_v10_S3 = '/Data/SLAND_Trendy-v10_S3_LatLon/'\n",
+    "dir_grids         = '/Data/grids/'\n",
+    "dir_forest        = '/Data/forest_masks/'\n",
+    "dir_fig           = '/Figures/'\n"
    ]
   },
   {
@@ -47,7 +47,6 @@
    "execution_count": null,
    "id": "a81ff943-29d4-4e64-aa4d-9e550193d07f",
    "metadata": {
-    "scrolled": true,
     "tags": []
    },
    "outputs": [],
@@ -58,7 +57,6 @@
     "#Select all natural land or forests only\n",
     "selection = 'NaturalLandCoverFraction'\n",
     "selection = 'ForestFraction'\n",
-    "\n",
     "\n",
     "#Skip CABLE-POP as there is a problem with the natural land cover fraction (I did not investigate this further, since it only affects a Supplementary Figure)\n",
     "if selection=='NaturalLandCoverFraction':\n",
@@ -91,7 +89,7 @@
     "    elif model=='CLM5.0':\n",
     "        dir_trendy_S2 = dir_trendy_v9_S2\n",
     "        dir_trendy_S3 = dir_trendy_v8_S3\n",
-    "    elif model=='CLASSIC-N':\n",
+    "    elif model in ['CLASSIC-N', 'SDGVM']:\n",
     "        dir_trendy_S2 = dir_trendy_v10_S2\n",
     "        dir_trendy_S3 = dir_trendy_v10_S3\n",
     "    else:\n",
@@ -103,14 +101,16 @@
     "    else:                      model_read = model\n",
     "        \n",
     "    #Get files that contain forest fraction for Trendy models\n",
-    "    files_S2 = sorted([file for file in os.listdir(dir_trendy_S2) if model_read + '_' in file and selection in file and 'regrid360x720-ForestMask' in file])\n",
-    "    files_S3 = sorted([file for file in os.listdir(dir_trendy_S3) if model_read + '_' in file and selection in file and 'regrid360x720-ForestMask' in file])\n",
+    "    files_S2 = sorted([file for file in os.listdir(dir_trendy_S2) if model_read + '_' in file and selection + '.nc' in file])\n",
+    "    files_S3 = sorted([file for file in os.listdir(dir_trendy_S3) if model_read + '_' in file and selection + '.nc' in file])\n",
     "    if len(files_S2)!=1:  sys.exit('File name not unique')\n",
     "    if len(files_S3)!=1:  sys.exit('File name not unique')\n",
     "    \n",
     "    #Read data\n",
-    "    data_S2 = xr.open_dataset(dir_trendy_S2 + files_S2[0])\n",
-    "    data_S3 = xr.open_dataset(dir_trendy_S3 + files_S3[0])\n",
+    "    fname_S2 = dir_trendy_S2 + files_S2[0]\n",
+    "    fname_S3 = dir_trendy_S3 + files_S3[0]\n",
+    "    data_S2 = xr.open_dataset(fname_S2)\n",
+    "    data_S3 = xr.open_dataset(fname_S3)\n",
     "    \n",
     "    data_S2 = data_S2[var_name].to_dataset(name=var_name)\n",
     "    data_S3 = data_S3[var_name].to_dataset(name=var_name)\n",
@@ -118,43 +118,58 @@
     "    #Calculate average over last 20 years if time variable exists\n",
     "    if 'time' in data_S2.dims:  data_S2 = data_S2.isel(time=slice(-20, None)).mean('time')\n",
     "    if 'time' in data_S3.dims:  data_S3 = data_S3.isel(time=slice(-20, None)).mean('time')        \n",
-    "   \n",
-    "    #Collect data in one dataset\n",
-    "    if create==1:\n",
-    "        data_for_PI_S2 = data_S2\n",
-    "        data_for_PI_S3 = data_S3\n",
-    "        create = 0\n",
+    "    \n",
+    "    #Calculate fraction as fraction of S3 to S2 simulations\n",
+    "    for_weight = data_S3[var_name] / data_S2[var_name]\n",
+    "\n",
+    "    #Only allow weighting factors larger than 1 for land grid points with at least 0.1% forest cover\n",
+    "    for_weight = xr.where(data_S2[var_name]>0.001, for_weight, 1)\n",
+    "\n",
+    "    #Replace NaNs bei 0\n",
+    "    for_weight = for_weight.fillna(0)\n",
+    "    \n",
+    "    #Convert to data set\n",
+    "    for_weight = for_weight.to_dataset(name=var_name_out)\n",
+    "\n",
+    "    #Define output file name\n",
+    "    fname_weight = dir_forest + fname_out + '_DGVMs-S2-S3_grid_' + model + '.nc'\n",
+    "    if os.path.exists(fname_weight):  os.remove(fname_weight)\n",
+    "    \n",
+    "    #Save data (and regrid Trendy-v9 data to Trendy-v10 grid for ORCHIDEEv3)\n",
+    "    if model!='ORCHIDEEv3':\n",
+    "            \n",
+    "        #Save in file\n",
+    "        for_weight.to_netcdf(fname_weight)\n",
+    "        \n",
     "    else:\n",
-    "        data_for_PI_S2 = xr.concat((data_for_PI_S2, data_S2), dim='model')\n",
-    "        data_for_PI_S3 = xr.concat((data_for_PI_S3, data_S3), dim='model')\n",
+    "        \n",
+    "        #Define temporary file names\n",
+    "        fname_grid_tmp = dir_forest + 'grid_xy_' + model + '_tmp'\n",
+    "        fname_tmp1     = dir_forest + 'data_' + model + '_tmp1.nc'\n",
+    "        fname_tmp2     = dir_forest + 'data_' + model + '_tmp2.nc'\n",
+    "        if os.path.exists(fname_grid_tmp):  os.remove(fname_grid_tmp)\n",
+    "        if os.path.exists(fname_tmp1):      os.remove(fname_tmp1)\n",
+    "        if os.path.exists(fname_tmp2):      os.remove(fname_tmp2)\n",
+    "        \n",
+    "        #Save data in NetCDF and set grid\n",
+    "        for_weight.to_netcdf(fname_tmp1)\n",
+    "        os.system('cdo -s griddes -selvar,' + var_name + ' ' + fname_S2 + ' > ' + fname_grid_tmp)\n",
+    "        os.system('cdo -s setgrid,' + fname_grid_tmp + ' ' + fname_tmp1 + ' ' + fname_tmp2)\n",
+    "        \n",
+    "        #Conservatively regrid weights\n",
+    "        file_grid = dir_grids + 'grid_xy_' + model\n",
+    "        os.system('cdo -s remapcon,' + file_grid + \" \" + fname_tmp2 + \" \" + fname_weight)\n",
     "\n",
-    "#Add model names\n",
-    "data_for_PI_S2['model'] = models\n",
-    "data_for_PI_S3['model'] = models\n",
-    "\n",
-    "#Calculate fraction as fraction of S3 to S2 simulations\n",
-    "for_weight = data_for_PI_S3[var_name] / data_for_PI_S2[var_name]\n",
-    "\n",
-    "#Only allow weighting factors larger than 1 for land grid points with at least 0.1% forest cover\n",
-    "for_weight = xr.where(data_for_PI_S2[var_name]>0.001, for_weight, 1)\n",
-    "# for_weight = xr.where(data_for_PI_S3[var_name]>0.001, for_weight, 0)\n",
-    "\n",
-    "#Replace NaNs bei 0\n",
-    "for_weight = for_weight.fillna(0)\n",
-    "\n",
-    "#Convert to data set\n",
-    "for_weight = for_weight.to_dataset(name=var_name_out)\n",
-    "\n",
-    "#Save in file\n",
-    "fname_weight = dir_forest + fname_out + '_DGVMs-S2-S3_regrid360x720-ForestMask.nc'\n",
-    "if os.path.exists(fname_weight):  os.remove(fname_weight)\n",
-    "for_weight.to_netcdf(fname_weight)\n"
+    "        #Remove temporary files\n",
+    "        os.remove(fname_grid_tmp)\n",
+    "        os.remove(fname_tmp1)\n",
+    "        os.remove(fname_tmp2)        \n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b7e82418-c400-4fba-91d0-17963863c642",
+   "id": "a7e6fc03-5b6d-4f0b-8835-b7f06dbb62f0",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -162,9 +177,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Clemens Python3.10",
+   "display_name": "Python 3 (based on the module python3/2022.01)",
    "language": "python",
-   "name": "my-kernel"
+   "name": "python3_2022_01"
   },
   "language_info": {
    "codemirror_mode": {
@@ -176,7 +191,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.9.9"
   }
  },
  "nbformat": 4,
