--- a/Scripts2_DataPreparation_LULUCF_BookkeepingModels/Prep1_Forest_area_BLUE.ipynb
+++ b/Scripts2_DataPreparation_LULUCF_BookkeepingModels/Prep1_Forest_area_BLUE.ipynb
@@ -20,11 +20,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dir_BLUE1    = '/GCB2021/Data/Output_GCB2021/202109_GCB2021_run/run_v3_ForestArea_1991-2021/'\n",
-    "dir_BLUE2    = '/GCB2021/Data/Output_GCB2021/202208_GCB2021_run/run_v4_ForestArea_1700-1730/'\n",
-    "dir_grids    = '/Trendy/Data/grids/'\n",
-    "dir_for_area = '/GCB2021_commentary/Data/forest_area/'\n",
-    "dir_for_mask = '/GCB2021_commentary/Data/forest_masks/'\n",
+    "dir_BLUE1    = '/Data/Output_GCB2021/202109_GCB2021_run/run_v3_ForestArea_1991-2021/'\n",
+    "dir_BLUE2    = '/Data/Output_GCB2021/202208_GCB2021_run/run_v4_ForestArea_1700-1730/'\n",
+    "dir_grids    = '/Data/grids/'\n",
+    "dir_for_area = '/Data/forest_area/'\n",
+    "dir_for_mask = '/Data/forest_masks/'\n",
     "    "
    ]
   },
