--- a/Scripts2_DataPreparation_LULUCF_BookkeepingModels/Prep2a_Scale_HN2021_to_BLUE_grid.ipynb
+++ b/Scripts2_DataPreparation_LULUCF_BookkeepingModels/Prep2a_Scale_HN2021_to_BLUE_grid.ipynb
@@ -20,13 +20,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dir_ELUC       = '/GCB2021/Data/Output_GCB2021/202109_GCB2021_run/run_v1_1700-2021/'\n",
-    "dir_ctrs       = '/Trendy/Data/data_ancillary/info_countries/'\n",
-    "dir_grids      = '/Trendy/Data/grids/'\n",
-    "dir_ELUC_2021  = '/GCB2021_commentary/Data/ELUC_countries/'\n",
-    "dir_ELUC_NGHGI = '/GCB2021_commentary/Data/data_ELUC_NGHGI/'\n",
-    "dir_peat       = '/GCB2021/Data/Peat_data/'\n",
-    "dir_tmp        = '/Trendy/Data/tmp/'\n"
+    "dir_ELUC       = '/Data/Output_GCB2021/202109_GCB2021_run/run_v1_1700-2021/'\n",
+    "dir_ctrs       = '/Data/data_ancillary/info_countries/'\n",
+    "dir_grids      = '/Data/grids/'\n",
+    "dir_ELUC_2021  = '/Data/ELUC_countries/'\n",
+    "dir_ELUC_NGHGI = '/Data/data_ELUC_NGHGI/'\n",
+    "dir_peat       = '/Data/Peat_data/'\n",
+    "dir_tmp        = '/Data/tmp/'\n"
    ]
   },
   {
@@ -351,7 +351,7 @@
     "    #Distribute HN2021 ELUC sinks equally in country if BLUE ELUC is 0\n",
     "    if np.any(sel_BLUE_snk==0):\n",
     "        \n",
-    "        #Get countr area,  calculate sink density in country and sSelect times when BLUE is 0\n",
+    "        #Get country area, calculate sink density in country and select times when BLUE is 0\n",
     "        area_ctr = (data_area * sel_country).sum(('lat', 'lon')).values.item()\n",
     "        density_snk = sel_HN2021_snk / area_ctr * 1e6 # unit: tC / ha\n",
     "        density_snk[np.isnan(density_snk)] = 0\n",
@@ -386,11 +386,11 @@
     "        data_HN2021_grid_src = data_HN21_src_scaled\n",
     "        create = 0\n",
     "    else:\n",
-    "        data_HN2021_grid_snk = data_HN2021_grid_snk + ds_drain\n",
+    "        data_HN2021_grid_snk = data_HN2021_grid_snk + data_HN21_snk_scaled\n",
     "        data_HN2021_grid_src = data_HN2021_grid_src + data_HN21_src_scaled\n",
     "\n",
     "    if np.sum(~np.isnan(data_HN2021_grid_snk.isel(time=0).ELUC))==0:\n",
-    "        sdafasf        \n",
+    "        sys.exit('No fluxes for H&N GCB2021 for the country ' + country)\n",
     "\n",
     "        \n",
     "#Define output file name\n",
