--- a/Scripts2_DataPreparation_LULUCF_BookkeepingModels/Prep2b_Scale_OSCAR_to_BLUE_grid.ipynb
+++ b/Scripts2_DataPreparation_LULUCF_BookkeepingModels/Prep2b_Scale_OSCAR_to_BLUE_grid.ipynb
@@ -20,13 +20,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dir_ELUC       = '/GCB2021/Data/Output_GCB2021/202109_GCB2021_run/run_v1_1700-2021/'\n",
-    "dir_ctrs       = '/Trendy/Data/data_ancillary/info_countries/'\n",
-    "dir_grids      = '/Trendy/Data/grids/'\n",
-    "dir_ELUC_2021  = '/GCB2021_commentary/Data/ELUC_countries/'\n",
-    "dir_ELUC_NGHGI = '/GCB2021_commentary/Data/data_ELUC_NGHGI/'\n",
-    "dir_peat       = '/GCB2021/Data/Peat_data/'\n",
-    "dir_tmp        = '/Trendy/Data/tmp/'\n"
+    "dir_ELUC       = '/Data/Output_GCB2021/202109_GCB2021_run/run_v1_1700-2021/'\n",
+    "dir_ctrs       = '/Data/data_ancillary/info_countries/'\n",
+    "dir_grids      = '/Data/grids/'\n",
+    "dir_ELUC_2021  = '/Data/ELUC_countries/'\n",
+    "dir_ELUC_NGHGI = '/Data/data_ELUC_NGHGI/'\n",
+    "dir_peat       = '/Data/Peat_data/'\n",
+    "dir_tmp        = '/Data/tmp/'\n"
    ]
   },
   {
