--- a/Scripts2_DataPreparation_LULUCF_BookkeepingModels/Prep3a_Calc_ELUC-BLUE_countries_1750-2020.ipynb
+++ b/Scripts2_DataPreparation_LULUCF_BookkeepingModels/Prep3a_Calc_ELUC-BLUE_countries_1750-2020.ipynb
@@ -20,13 +20,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dir_ELUC  = '/GCB2021/Data/Output_GCB2021/202109_GCB2021_run/run_v1_1700-2021/'\n",
-    "dir_ctrs  = '/Trendy/Data/data_ancillary/info_countries/'\n",
-    "dir_grids = '/Trendy/Data/grids/'\n",
-    "dir_peat  = '/GCB2021/Data/Peat_data/'\n",
-    "dir_out   = '/GCB2021_commentary/Data/ELUC_countries/'\n",
-    "dir_out2  = '/GCB2021_commentary/Data/data_ELUC_NGHGI/'\n",
-    "dir_tmp   = '/Trendy/Data/tmp/'\n"
+    "dir_ELUC  = '/Data/Output_GCB2021/202109_GCB2021_run/run_v1_1700-2021/'\n",
+    "dir_ctrs  = '/Data/data_ancillary/info_countries/'\n",
+    "dir_grids = '/Data/grids/'\n",
+    "dir_peat  = '/Data/Peat_data/'\n",
+    "dir_out   = '/Data/ELUC_countries/'\n",
+    "dir_out2  = '/Data/data_ELUC_NGHGI/'\n",
+    "dir_tmp   = '/Data/tmp/'\n"
    ]
   },
   {
@@ -45,7 +45,7 @@
     "#Create reference grid\n",
     "fname_in = dir_ELUC + '202109_GCB2021_run_v1_1700-2021__CurrentCPools_CD.nc'\n",
     "fname_grid = dir_grids + 'grid_xy_BLUE'\n",
-    "os.system('cdo griddes -selvar,CD_A' + ' ' + fname_in + ' > ' + fname_grid)\n"
+    "os.system('cdo -s griddes -selvar,CD_A' + ' ' + fname_in + ' > ' + fname_grid)\n"
    ]
   },
   {
@@ -290,9 +290,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Clemens Python3.10",
+   "display_name": "Python 3 (based on the module python3/2022.01)",
    "language": "python",
-   "name": "my-kernel"
+   "name": "python3_2022_01"
   },
   "language_info": {
    "codemirror_mode": {
@@ -304,7 +304,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.9.9"
   }
  },
  "nbformat": 4,
