--- a/Scripts2_DataPreparation_LULUCF_BookkeepingModels/Prep3b_Calc_ELUC-BLUE_countries_2000-2020.ipynb
+++ b/Scripts2_DataPreparation_LULUCF_BookkeepingModels/Prep3b_Calc_ELUC-BLUE_countries_2000-2020.ipynb
@@ -20,11 +20,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dir_ELUC  = '/GCB2021/Data/Output_GCB2021/202109_GCB2021_run/run_v1_1700-2021/'\n",
-    "dir_ctrs  = '/Trendy/Data/data_ancillary/info_countries/'\n",
-    "dir_grids = '/Trendy/Data/grids/'\n",
-    "dir_out   = '/GCB2021_commentary/Data/ELUC_countries/'\n",
-    "dir_tmp   = '/Trendy/Data/tmp/'\n"
+    "dir_ELUC  = '/Data/Output_GCB2021/202109_GCB2021_run/run_v1_1700-2021/'\n",
+    "dir_ctrs  = '/Data/data_ancillary/info_countries/'\n",
+    "dir_grids = '/Data/grids/'\n",
+    "dir_out   = '/Data/ELUC_countries/'\n",
+    "dir_tmp   = '/Data/tmp/'\n"
    ]
   },
   {
@@ -43,7 +43,7 @@
     "#Create reference grid\n",
     "fname_in = dir_ELUC + '202109_GCB2021_run_v1_1700-2021__CurrentCPools_CD.nc'\n",
     "fname_grid = dir_out + 'grid_xy_BLUE'\n",
-    "os.system('cdo griddes -selvar,CD_A' + ' ' + fname_in + ' > ' + fname_grid)\n"
+    "os.system('cdo -s griddes -selvar,CD_A' + ' ' + fname_in + ' > ' + fname_grid)\n"
    ]
   },
   {
@@ -51,43 +51,6 @@
    "metadata": {},
    "source": [
     "## Calculate ELUC"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# #Read ELUC data\n",
-    "# fname = dir_ELUC + '202109_GCB2021_run_v1_1700-2021__CurrentCPools_CD.nc'\n",
-    "# data_read = xr.open_dataset(fname)\n",
-    "\n",
-    "# #Select time\n",
-    "# time_sta = '2000'\n",
-    "# time_end = '2020'\n",
-    "\n",
-    "# #Select time period and variable\n",
-    "# data_read = data_read.sel(time=slice(time_sta, None))\n",
-    "# data_ELUC = data_read['CD_A']\n",
-    "\n",
-    "# #Calculate ELUC\n",
-    "# data_ELUC = data_ELUC.diff('time')\n",
-    "# data_ELUC['time'] = data_ELUC['time'] - 1\n",
-    "# data_ELUC = data_ELUC.sel(time=slice(time_sta, time_end))\n",
-    "\n",
-    "# #Convert from tC/ha to Tg C\n",
-    "# data_ELUC = data_ELUC * data_read.cell_area / 1e6\n",
-    "# data_ELUC = data_ELUC.to_dataset(name='ELUC')\n",
-    "# data_ELUC.ELUC.attrs['unit'] = 'Tg C/year'\n",
-    "\n",
-    "# #Define compression level\n",
-    "# comp = dict(zlib=True, complevel=2)\n",
-    "# encoding = {var: comp for var in data_ELUC.data_vars}\n",
-    "\n",
-    "# #Save in file\n",
-    "# fname_out = dir_out + 'ELUC_BLUE_GCB2021_' + time_sta + '-' + time_end + '.nc'\n",
-    "# data_ELUC.to_netcdf(fname_out, encoding=encoding)\n"
    ]
   },
   {
@@ -258,7 +221,7 @@
     "\n",
     "        #Adde units in first cell\n",
     "        ELUC_ctrs_df = ELUC_ctrs_df.rename_axis('unit: Tg C/year')\n",
-    "\n",
+    "        \n",
     "        #Create sheet in xlsx for every model and store country data\n",
     "        ELUC_ctrs_df.to_excel(writer, sheet_name='BLUE_ELUC_IPCC_ctrs', index=True, header=True, float_format='%.6f')\n",
     "\n",
@@ -276,9 +239,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 unstable (using the module python3/unstable)",
+   "display_name": "Python 3 (based on the module python3/2022.01)",
    "language": "python",
-   "name": "python3_unstable"
+   "name": "python3_2022_01"
   },
   "language_info": {
    "codemirror_mode": {
@@ -290,7 +253,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.6"
+   "version": "3.9.9"
   }
  },
  "nbformat": 4,
