--- a/Scripts3_Figures/Plot_Fig1_SLAND_ELUC_map.ipynb
+++ b/Scripts3_Figures/Plot_Fig1_SLAND_ELUC_map.ipynb
@@ -37,15 +37,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dir_SLAND    = '/Trendy/Data/SLAND_Trendy-v10_S2_LatLon/'\n",
-    "dir_forest   = '/GCB2021_commentary/Data/forest_masks/'\n",
-    "dir_ELUC     = '/GCB2021_commentary/Data/ELUC_countries/'\n",
-    "dir_peat     = '/GCB2021/Data/Peat_data/'\n",
-    "dir_data_ctr = '/GCB2021_commentary/Data/data_ELUC_NGHGI_SLAND_plot/'\n",
-    "dir_LSM      = '/Trendy/Data/LSMs_Trendy-v10/'\n",
-    "dir_area     = '/Trendy/Data/gridarea/'\n",
-    "dir_grids    = '/Trendy/Data/grids/'\n",
-    "dir_fig      = '/GCB2021_commentary/Figures/'\n"
+    "dir_SLAND    = '/Data/SLAND_Trendy-v10_S2_LatLon/'\n",
+    "dir_forest   = '/Data/forest_masks/'\n",
+    "dir_ELUC     = '/Data/ELUC_countries/'\n",
+    "dir_peat     = '/Data/Peat_data/'\n",
+    "dir_data_ctr = '/Data/data_ELUC_NGHGI_SLAND_plot/'\n",
+    "dir_LSM      = '/Data/LSMs_Trendy-v10/'\n",
+    "dir_fig      = '/Figures/'\n"
    ]
   },
   {
@@ -71,10 +69,6 @@
     "#Read forest fraction\n",
     "fname_Hansen = dir_forest + 'ForestFraction_0.5deg_2013_regrid360x720-ForestMask.nc'\n",
     "data_Hansen = xr.open_dataset(fname_Hansen)\n",
-    "\n",
-    "#Read weight factors for forest (forest fraction in Hansen 2013 divided by pre-industrial forest fraction from S2 simulations)\n",
-    "fname_weight = dir_forest + 'Weights_ForestFraction_DGVMs-S2-S3_regrid360x720-ForestMask.nc'\n",
-    "for_weight = xr.open_dataset(fname_weight)\n",
     "\n",
     "#Re-index data\n",
     "check_lat = np.max(np.abs(data_Hansen['lat'].values - for_mask.lat.values))\n",
@@ -103,7 +97,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Read SLAND data"
+    "## Read SLAND data (new)"
    ]
   },
   {
@@ -115,93 +109,31 @@
     "time_sta = '2001'\n",
     "time_end = '2015'\n",
     "\n",
-    "models = ['CABLE-POP', 'CLASSIC', 'CLM5.0', 'DLEM', 'IBIS', 'ISAM', 'ISBA-CTRIP', 'JSBACH', 'JULES-ES-1.1',\n",
-    "          'LPJ-GUESS', 'LPJwsl', 'LPX-Bern', 'OCN', 'ORCHIDEEv3', 'SDGVM', 'VISIT', 'YIBs'] #'CLASSIC-N', 'ORCHIDEE', \n",
+    "for_limit = 0.20\n",
     "\n",
-    "experiment = 'S2'\n",
+    "#Select grid size\n",
+    "# gridsize = '360x720'\n",
+    "gridsize = '360x720-ForestMask'\n",
+    "\n",
+    "#Read SLAND data\n",
+    "fname_SLAND = dir_SLAND + \"SLAND-weighted_ForestFraction_DGVMs-S2-S3_all-models_\" + time_sta + \"-\" + time_end + \"-mean_regrid\" + gridsize + \".nc\"\n",
+    "data_SLAND  = xr.open_dataset(fname_SLAND)\n",
     "\n",
     "#Read land-sea mak\n",
-    "fname_LSM = dir_LSM + 'LandSeaMask_360x720-ForestMask_v2.nc'\n",
+    "fname_LSM = dir_LSM + 'LandSeaMask_' + gridsize + '.nc'\n",
     "data_LSM  = xr.open_dataset(fname_LSM)\n",
     "\n",
-    "#Read gridarea\n",
-    "fname_area = dir_area + 'gridarea_360x720-ForestMask.nc'\n",
-    "data_area  = xr.open_dataset(fname_area)\n",
-    "\n",
-    "coll_all = pd.DataFrame(index=models, columns = ['forest-non-intact', 'forest-intact', 'all'])\n",
-    "\n",
-    "#Loop over models\n",
-    "create = 1\n",
-    "for model in models:\n",
-    "    \n",
-    "    #Read data\n",
-    "    fname = dir_SLAND + model + '_' + experiment + '_SLAND_NBP_regrid360x720-ForestMask.nc'\n",
-    "    data = xr.open_dataset(fname)\n",
-    "\n",
-    "    #Select and average over time\n",
-    "    data = data.sel(time=slice(time_sta, time_end))    \n",
-    "    data = data.mean('time')\n",
-    "\n",
-    "    #Define coorcinate names\n",
-    "    if 'latitude' in data.coords:  lat_name, lon_name = 'latitude', 'longitude'\n",
-    "    else:                          lat_name, lon_name = 'lat', 'lon'\n",
-    "        \n",
-    "    #Make sure that latitude and longitude agree\n",
-    "    for_nonintact = for_nonintact.reindex({'lat': data[lat_name], 'lon': data[lon_name]}, method='nearest')\n",
-    "    for_intact    = for_intact.reindex({'lat': data[lat_name], 'lon': data[lon_name]}, method='nearest')\n",
-    "    data_Hansen   = data_Hansen.reindex({'lat': data[lat_name], 'lon': data[lon_name]}, method='nearest')\n",
-    "    for_weight    = for_weight.reindex({'lat': data[lat_name], 'lon': data[lon_name]}, method='nearest')\n",
-    "\n",
-    "    #Get weights (if no weights for specific model exist, use the average of all other models)\n",
-    "    if model in for_weight.model:\n",
-    "        weight = for_weight.sel(model=model)['w_FF'].drop('model')\n",
-    "    else:\n",
-    "        print(model)\n",
-    "        weight = for_weight['w_FF'].mean('model')\n",
-    "    \n",
-    "    #Define forest weights and apply weighting\n",
-    "    weight_for = weight.where(data_Hansen.forest_fraction>=0.15)\n",
-    "    data_for   = data * weight_for\n",
-    "    \n",
-    "    #Define weight for all land and apply weighting\n",
-    "    weight   = weight.where(weight>0, 1)\n",
-    "    data_all = data * weight\n",
-    "    \n",
-    "    #Calculate data that are printed below\n",
-    "    coll_all.loc[model, 'forest-non-intact'] = data_for.where(for_nonintact==1).SLAND.sum().values\n",
-    "    coll_all.loc[model, 'forest-intact']     = data_for.where(for_intact==1).SLAND.sum().values\n",
-    "    coll_all.loc[model, 'forest']            = data_for.SLAND.sum().values\n",
-    "    coll_all.loc[model, 'all']               = data_all.SLAND.sum().values\n",
-    "    coll_all.loc[model, 'all_unweighted']    = data.SLAND.sum().values\n",
-    "    \n",
-    "    #Collect in array\n",
-    "    if create==1:\n",
-    "        data_coll = data_all\n",
-    "        create = 0\n",
-    "    else:\n",
-    "        data_coll = xr.concat((data_coll, data_all), dim='model')\n",
-    "\n",
-    "#Add model names\n",
-    "data_coll['model'] = models\n",
-    "\n",
-    "#Calculate flux in Pg C / ha / year ([data_coll] =  Pg C / year)\n",
-    "data_coll_dens = 10**4 * data_coll / data_area.cell_area\n",
-    "\n",
-    "#Convert Pg C / ha / year to t C / ha / year\n",
-    "data_coll_dens = 10**9 * data_coll_dens\n",
-    "\n",
     "#Calculate multi-model median\n",
-    "data_SLAND_map = data_coll_dens.median(dim='model')\n",
+    "data_SLAND_map = data_SLAND.median(dim='model')\n",
     "\n",
     "#Apply land-sea mask\n",
-    "data_SLAND_map = data_SLAND_map.where(data_LSM.sftlf>=50)\n",
+    "data_SLAND_map = data_SLAND_map.where(data_LSM.sftlf>=0.5)\n",
     "\n",
     "#Set correct sign vor SLAND\n",
     "data_SLAND_map = -data_SLAND_map\n",
     "\n",
     "#Convert unit from t C / ha / year to t CO2 / ha / year\n",
-    "data_SLAND_map = 44/12 * data_SLAND_map\n",
-    "coll_all       = 44/12 * coll_all\n"
+    "data_SLAND_map = 44/12 * data_SLAND_map\n"
    ]
   },
   {
@@ -291,7 +223,6 @@
     "time_end = '2015'\n",
     "\n",
     "#Read SLAND\n",
-    "# file_name  = dir_data_ctr + 'Collection_SLAND_total_' + time_sta + '-' + time_end + '.pickle'\n",
     "file_name  = dir_data_ctr + 'Collection_SLAND_total-weighted_' + time_sta + '-' + time_end + '.pickle'\n",
     "data_SLAND = pd.read_pickle(file_name)\n",
     "\n",
