--- a/Scripts3_Figures/Plot_Fig2_NGHGI_composition.ipynb
+++ b/Scripts3_Figures/Plot_Fig2_NGHGI_composition.ipynb
@@ -30,9 +30,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dir_data = '/GCB2021_commentary/Data/data_ELUC_NGHGI_SLAND_plot/'\n",
-    "dir_ctrs = '/Trendy/Data/data_ancillary/info_countries/'\n",
-    "dir_fig  = '/GCB2021_commentary/Figures/'\n"
+    "dir_data = '/Data/data_ELUC_NGHGI_SLAND_plot/'\n",
+    "dir_ctrs = '/Data/data_ancillary/info_countries/'\n",
+    "dir_fig  = '/Figures/'\n"
    ]
   },
   {
@@ -217,6 +217,9 @@
     "\n",
     "fig, ax = plt.subplots(1, 1, figsize=(18 * len(countries_sel)/10, 5))\n",
     "\n",
+    "gap_before = 0\n",
+    "gap_after = 0\n",
+    "\n",
     "#Loop over all IPCC countries\n",
     "ctrs = []\n",
     "ix = 0\n",
@@ -259,11 +262,11 @@
     "    else:               alpha_CAN = 1\n",
     "    \n",
     "    #Define x positions\n",
-    "    x1 = i + 4/25 #- 0.5/25\n",
-    "    x2 = i + 8/25 #- 0.5/25\n",
-    "    x3 = i + 14/25# - 0.5/25\n",
-    "    x4 = i + 20/25# - 0.5/25\n",
-    "    x5 = i + 22/25# - 0.5/25\n",
+    "    x1 = i + 4/25\n",
+    "    x2 = i + 8/25\n",
+    "    x3 = i + 14/25\n",
+    "    x4 = i + 20/25\n",
+    "    x5 = i + 22/25\n",
     "    \n",
     "    #Plot bars    \n",
     "    p1 = ax.bar(x1, ELUC_val, wid, color=col_ELUC, zorder=30)\n",
@@ -285,7 +288,7 @@
     "\n",
     "    #Plot gap\n",
     "    p5 = ax.bar(x4, NGHGI-ELUC_val, 0.55 * wid, bottom=ELUC_val, color='indianred', zorder=25)\n",
-    "    p6 = ax.bar(x5, resid_val_top, 0.55 * wid, bottom=resid_val_bot, color='#fec500', alpha=alpha_CAN, zorder=20) #lightgreen\n",
+    "    p6 = ax.bar(x5, resid_val_top, 0.55 * wid, bottom=resid_val_bot, color='#fec500', alpha=alpha_CAN, zorder=20)\n",
     "\n",
     "    #Plot lines from one bar to the next one\n",
     "    ax.plot([x1 - 3/5 * wid, x2 +  3/5 * wid], [ELUC_val, ELUC_val], '-', color=col_ELUC, linewidth=2, zorder=29.5)\n",
@@ -334,6 +337,9 @@
     "    elif country=='EU27_UK':  ctr_name = 'EU27&UK'\n",
     "    else:                     ctr_name = data_cntrs.loc[country].item()\n",
     "    ctrs.append(ctr_name)\n",
+    "    \n",
+    "    gap_before = gap_before + np.abs(NGHGI-ELUC_val)\n",
+    "    gap_after  = gap_after + np.abs(resid_val_top)\n",
     "\n",
     "#Set x-ticks and x-tick labels\n",
     "ax.set_xticks(np.arange(0.5, len(ctrs)))\n",
@@ -352,31 +358,19 @@
     "ax.tick_params(axis=\"x\", which=\"both\", bottom= False, top=False)\n",
     "\n",
     "#Legend\n",
-    "if show_BK_all==1:\n",
-    "    ax.legend([p1[0], p2[0], p3[0], p4[0], p7[0], p6[0], p8[0], p0[0]], ['ELUC', 'SLAND (non-intact forests)', 'SLAND (total)', 'Residual', 'NGHGI', 'BLUE2021', 'H&N2021', 'OSCAR2021'], fontsize=18, frameon = False, loc=8, ncol=3, bbox_to_anchor=(0.5, -0.5))\n",
-    "    out_name = '_allBKs'\n",
-    "else:\n",
-    "    if include_SLANDtot==1:\n",
-    "        leg1 = ax.legend([p1[0], p2[0], p3[0], p4[0]], ['Anthropogenic LULUCF flux', 'Natural land flux (non-intact forests)', 'Natural land flux (total)', 'LULUCF flux from country reports'], fontsize=fs_leg, frameon = False, loc=9, ncol=1, bbox_to_anchor=(0.24, -0.2))\n",
-    "    else:\n",
-    "        leg1 = ax.legend([p1[0], p2[0], p4[0]], ['Anthropogenic LULUCF flux from models', 'Natural land flux in managed forests from models', 'LULUCF flux from country reports'], fontsize=fs_leg, frameon = False, loc=9, ncol=1, bbox_to_anchor=(0.275, -0.2))\n",
-    "    ax.add_artist(leg1)\n",
-    "    ax.legend([p5[0], p6[0]], ['Gap before including natural land flux', 'Gap after including natural land flux'], fontsize=fs_leg, frameon = False, loc=9, ncol=1, bbox_to_anchor=(0.79, -0.2))\n",
-    "    out_name = ''\n",
+    "leg1 = ax.legend([p1[0], p2[0], p4[0]], ['Anthropogenic LULUCF flux from models', 'Natural land flux in managed forests from models', 'LULUCF flux from country reports'], fontsize=fs_leg, frameon = False, loc=9, ncol=1, bbox_to_anchor=(0.275, -0.2))\n",
+    "ax.add_artist(leg1)\n",
+    "ax.legend([p5[0], p6[0]], ['Gap before including natural land flux', 'Gap after including natural land flux'], fontsize=fs_leg, frameon = False, loc=9, ncol=1, bbox_to_anchor=(0.79, -0.2))\n",
     "\n",
     "#Save figure\n",
-    "if time_selection=='2001-2015':\n",
-    "    fig.savefig(dir_fig + 'Fig2_NGHGI_composition_' + time_selection + '_ForMask' + forest_mask_year + out_name + '.png', dpi=300, bbox_inches='tight')\n",
-    "    fig.savefig(dir_fig + 'Fig2_NGHGI_composition_' + time_selection + '_ForMask' + forest_mask_year + out_name + '.pdf', bbox_inches='tight')\n",
-    "else:\n",
-    "    fig.savefig(dir_fig + 'FigS3_NGHGI_composition_' + time_selection + '_ForMask' + forest_mask_year + out_name + '.png', dpi=300, bbox_inches='tight')\n",
-    "    "
+    "fig.savefig(dir_fig + 'Fig2_NGHGI_composition_' + time_selection + '_ForMask' + forest_mask_year + '.png', dpi=300, bbox_inches='tight')\n",
+    "fig.savefig(dir_fig + 'Fig2_NGHGI_composition_' + time_selection + '_ForMask' + forest_mask_year + '.pdf', bbox_inches='tight')\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "27b00cfd",
+   "id": "f01e2a67-0610-4198-9f3c-154a71ca9317",
    "metadata": {},
    "outputs": [],
    "source": []
