--- a/Scripts3_Figures/Plot_Fig3_forest_area.ipynb
+++ b/Scripts3_Figures/Plot_Fig3_forest_area.ipynb
@@ -20,10 +20,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dir_BLUE = '/GCB2021/Data/Output_GCB2021/202109_GCB2021_run/run_v3_ForestArea_1991-2021/'\n",
-    "dir_area = '/GCB2021_commentary/Data/forest_area/'\n",
-    "dir_ctrs = '/Trendy/Data/data_ancillary/info_countries/'\n",
-    "dir_fig  = '/GCB2021_commentary/Figures/'\n"
+    "dir_BLUE = '/Data/Output_GCB2021/202109_GCB2021_run/run_v3_ForestArea_1991-2021/'\n",
+    "dir_area = '/Data/forest_area/'\n",
+    "dir_ctrs = '/Data/data_ancillary/info_countries/'\n",
+    "dir_fig  = '/Figures/'\n"
    ]
   },
   {
@@ -149,12 +149,11 @@
    "outputs": [],
    "source": [
     "#Read data\n",
-    "fname_HanPot = dir_area + 'HansenPotapov_forest_area_intact_non-intact_2013.xlsx'\n",
+    "fname_HanPot = dir_area + 'HansenPotapov_forest_area_intact_non-intact_2013_v2.xlsx'\n",
     "data_HanPot  = pd.read_excel(fname_HanPot, header=0, index_col=0)\n",
     "\n",
     "#Convert m2 to Mio ha\n",
     "data_HanPot = data_HanPot / 1e4 / 1e6\n",
-    "\n",
     "#Add EU27&UK forest area\n",
     "data_HanPot['EU27_UK'] = data_HanPot[ctrs_EU].sum(axis=1)\n"
    ]
