--- a/Scripts3_Figures/Plot_FigS1_SLAND_different_weighting_factors.ipynb
+++ b/Scripts3_Figures/Plot_FigS1_SLAND_different_weighting_factors.ipynb
@@ -20,9 +20,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dir_SLAND = '/Trendy/Data/SLAND_Trendy-v10_S2_countries/'\n",
-    "dir_ctrs  = '/Trendy/Data/data_ancillary/info_countries/'\n",
-    "dir_fig   = '/GCB2021_commentary/Figures/'\n"
+    "dir_SLAND = '/Data/SLAND_Trendy-v10_S2_countries/'\n",
+    "dir_ctrs  = '/Data/data_ancillary/info_countries/'\n",
+    "dir_fig   = '/Figures/'\n"
    ]
   },
   {
@@ -82,15 +82,15 @@
     "for data_set in data_sets:\n",
     "\n",
     "    #Define different forest cover thresholds according to Hansen et al. (2013)\n",
-    "    if data_set=='DGVMs-Forests-PFTs':         Hansen_treshs = [0.05, 0.10, 0.15, 0.20, 0.25]#, 0.30, 0.35]\n",
-    "    elif data_set=='DGVMs-NaturalLand-PFTs':   Hansen_treshs = [0.15]    \n",
+    "    if data_set=='DGVMs-Forests-PFTs':         Hansen_treshs = [0.10, 0.15, 0.20, 0.25, 0.30]#[0.05, 0.10, 0.15, 0.20, 0.25]\n",
+    "    elif data_set=='DGVMs-NaturalLand-PFTs':   Hansen_treshs = [0.20]    \n",
     "    \n",
     "    #Loop over forest cover thresholds\n",
     "    for Han2013_thresh in Hansen_treshs:\n",
     "\n",
     "        \n",
     "        #Define file name\n",
-    "        fname = dir_SLAND + 'SLAND-S2-countries_' + selection + '_Weights-' + data_set + '_MaxForCover' + '{:.2f}'.format(Han2013_thresh) + '_vRemapToForestMask-Hansen2010_IFL_2013.xlsx'\n",
+    "        fname = dir_SLAND + 'SLAND-S2-countries_' + selection + '_Weights-' + data_set + '_MaxForCover' + '{:.2f}'.format(Han2013_thresh) + '_vRemapToForestMask-Hansen2010_IFL_2013_v2.xlsx'\n",
     "\n",
     "        #Create empyt dataframes\n",
     "        data_SLAND_coll = pd.DataFrame()\n",
@@ -155,7 +155,7 @@
     "fig, ax = plt.subplots(1, 1, figsize=(18 * len(countries_sel)/10, 5))\n",
     "\n",
     "#Define tresholds that should be plotted\n",
-    "Hansen_treshs = [0.05, 0.10, 0.15, 0.20, 0.25]\n",
+    "Hansen_treshs = [0.10, 0.15, 0.20, 0.25, 0.30]\n",
     "\n",
     "#Loop over countries\n",
     "ctrs  = []\n",
@@ -180,7 +180,7 @@
     "        y = [data_plot, data_plot]\n",
     "\n",
     "        #Define line width\n",
-    "        if Han2013_thresh==0.15:  lw = 4\n",
+    "        if Han2013_thresh==0.20:  lw = 4\n",
     "        else:                     lw = 2        \n",
     "        \n",
     "        #Plot\n",
@@ -193,8 +193,13 @@
     "            else:                     corr = 0\n",
     "            ax.text(x[0] - 0.05, y[0] + corr, '{:.0f}'.format(Han2013_thresh * 100) + '%', ha='right', va='center', fontsize=9)\n",
     "\n",
+    "        #Print relative change of natural land sink\n",
+    "        dara_ref     = data_SLAND['DGVMs-Forests-PFTs_0.20']\n",
+    "        dara_ref     = dara_ref.loc[country] / 1e3 * 44 / 12\n",
+    "        print('{:.1f}'.format((100 * (1 - data_extract.median()/dara_ref.median()))), end=', ')\n",
+    "\n",
     "    #Extract values for natural land PFTs\n",
-    "    data_extract = data_SLAND['DGVMs-NaturalLand-PFTs_0.15']\n",
+    "    data_extract = data_SLAND['DGVMs-NaturalLand-PFTs_0.20']\n",
     "    data_extract = data_extract.loc[country] / 1e3 * 44 / 12\n",
     "\n",
     "    #Calculate multi-model median\n",
@@ -241,7 +246,7 @@
     "legend = ax.legend(p_all, ['forest PFTs', 'natural land PFTs'], fontsize=18, loc=4, frameon=False)\n",
     "\n",
     "#Save figure\n",
-    "fig.savefig(dir_fig + 'FigS1_natural-land-sink_different-weighting-factors.png', dpi=300, bbox_inches='tight')\n"
+    "fig.savefig(dir_fig + 'FigS1NEW_natural-land-sink_different-weighting-factors.png', dpi=300, bbox_inches='tight')\n"
    ]
   },
   {
