--- a/Scripts3_Figures/PrepPlot_SLAND_ELUC_NGHGI_countries.ipynb
+++ b/Scripts3_Figures/PrepPlot_SLAND_ELUC_NGHGI_countries.ipynb
@@ -28,13 +28,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dir_ELUC_NGHGI = '/GCB2021_commentary/Data/data_ELUC_NGHGI/'\n",
-    "dir_SLAND      = '/Trendy/Data/SLAND_Trendy-v10_S2_countries/'\n",
-    "dir_ctrs       = '/Trendy/Data/data_ancillary/info_countries/'\n",
-    "dir_ELUC_2021  = '/GCB2021_commentary/Data/ELUC_countries/'\n",
-    "dir_peat       = '/GCB2021/Data/Peat_data/'\n",
-    "dir_out        = '/GCB2021_commentary/Data/data_ELUC_NGHGI_SLAND_plot/'\n",
-    "if not os.path.exists(dir_out):  os.mkdir(dir_out)\n"
+    "dir_ELUC_NGHGI = '/Data/data_ELUC_NGHGI/'\n",
+    "dir_SLAND      = '/Data/SLAND_Trendy-v10_S2_countries/'\n",
+    "dir_ctrs       = '/Data/data_ancillary/info_countries/'\n",
+    "dir_ELUC_2021  = '/Data/ELUC_countries/'\n",
+    "dir_peat       = '/Data/Peat_data/'\n",
+    "dir_out        = '/Data/data_ELUC_NGHGI_SLAND_plot/'\n"
    ]
   },
   {
@@ -96,22 +95,21 @@
    "outputs": [],
    "source": [
     "models_SLAND = ['CABLE-POP', 'CLASSIC', 'CLM5.0', 'DLEM', 'IBIS', 'ISAM', 'ISBA-CTRIP', 'JSBACH', 'JULES-ES-1.1',\n",
-    "                'LPJ-GUESS', 'LPJwsl', 'LPX-Bern', 'OCN', 'ORCHIDEEv3', 'SDGVM', 'VISIT', 'YIBs']\n",
+    "                'LPJ-GUESS', 'LPJwsl', 'LPX-Bern', 'OCN', 'ORCHIDEEv3', 'SDGVM', 'VISIT', 'YIBs']#'CLASSIC-N', 'ORCHIDEE'\n",
     "\n",
     "#Define parameters to select datasets\n",
     "selection      = 'non-intact-forests'\n",
     "data_set       = 'DGVMs-Forests-PFTs'\n",
-    "Han2013_thresh = 0.15\n",
+    "Han2013_thresh = 0.20\n",
     "\n",
     "#Define file names\n",
-    "fname_SLAND_total                = dir_SLAND + 'SLAND_S2_DGVMS_countries_ISOcode_vRemapSLAND.xlsx'\n",
-    "fname_SLAND_total_weightd        = dir_SLAND + 'SLAND-S2-countries_Weights-DGVMs-Forests-PFTs_total-SLAND_vRemapToForestMask-Hansen2010_IFL_2013.xlsx'\n",
-    "fname_SLAND_forest2013_nonintact = dir_SLAND + 'SLAND-S2-countries_' + selection + '_Weights-' + data_set + '_MaxForCover' + '{:.2f}'.format(Han2013_thresh) + '_vRemapToForestMask-Hansen2010_IFL_2013.xlsx'\n",
+    "fname_SLAND_total_weighted       = dir_SLAND + 'SLAND-S2-countries_Weights-DGVMs-Forests-PFTs_total-SLAND_vRemapToForestMask-Hansen2010_IFL_2013_v2.xlsx'\n",
+    "fname_SLAND_forest2013_nonintact = dir_SLAND + 'SLAND-S2-countries_' + selection + '_Weights-' + data_set + '_MaxForCover' + '{:.2f}'.format(Han2013_thresh) + '_vRemapToForestMask-Hansen2010_IFL_2013_v2.xlsx'\n",
+    "\n",
     "\n",
     "#Collect all file names and names for dictionary\n",
     "SLAND_versions= dict()\n",
-    "SLAND_versions['SLAND_total']                      = fname_SLAND_total\n",
-    "SLAND_versions['SLAND_total-weighted']             = fname_SLAND_total_weightd\n",
+    "SLAND_versions['SLAND_total-weighted']             = fname_SLAND_total_weighted\n",
     "SLAND_versions['SLAND_non-intact-forest_mask2013'] = fname_SLAND_forest2013_nonintact\n",
     "\n",
     "#Dictionary for storing data\n",
@@ -367,6 +365,7 @@
     "\n",
     "#Prepare data for China\n",
     "data_China = pd.DataFrame(columns=['NGHGI'], index=np.arange(2000, 2021))\n",
+    "# data_China.loc[1994] =  -407479 / 1000\n",
     "data_China.loc[2005] =  -803000 / 1000\n",
     "data_China.loc[2010] = -1029720 / 1000\n",
     "data_China.loc[2012] =  -575848 / 1000\n",
@@ -586,7 +585,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e953a68a-f7be-450d-8e29-5c7130eb4aa5",
+   "id": "f001d6ed-6ade-48f5-b1f7-acc3e1d332ba",
    "metadata": {},
    "outputs": [],
    "source": []
