--- a/Scripts2_DataPreparation_LULUCF_BookkeepingModels/Prep2c_Scale_OSCAR_country_data.ipynb
+++ b/Scripts2_DataPreparation_LULUCF_BookkeepingModels/Prep2c_Scale_OSCAR_country_data.ipynb
@@ -18,10 +18,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dir_ELUC_NGHGI = '/GCB2021_commentary/Data/data_ELUC_NGHGI/'\n",
-    "dir_ctrs       = '/Trendy/Data/data_ancillary/info_countries/'\n",
-    "dir_ELUC_2021  = '/GCB2021_commentary/Data/ELUC_countries/'\n",
-    "dir_peat       = '/GCB2021/Data/Peat_data/'\n"
+    "dir_ELUC_NGHGI = '/Data/data_ELUC_NGHGI/'\n",
+    "dir_ctrs       = '/Data/data_ancillary/info_countries/'\n",
+    "dir_ELUC_2021  = '/Data/ELUC_countries/'\n",
+    "dir_peat       = '/Data/Peat_data/'\n"
    ]
   },
   {
