--- a/Scripts2_DataPreparation_LULUCF_BookkeepingModels/Prep4a_Calc_ForestArea-BLUE_countries.ipynb
+++ b/Scripts2_DataPreparation_LULUCF_BookkeepingModels/Prep4a_Calc_ForestArea-BLUE_countries.ipynb
@@ -20,10 +20,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dir_area  = '/GCB2021_commentary/Data/forest_area/'\n",
-    "dir_ctrs  = '/Trendy/Data/data_ancillary/info_countries/'\n",
-    "dir_grid  = '/GCB2021_commentary/Data/ELUC_countries/'\n",
-    "dir_tmp   = '/Trendy/Data/tmp/'\n"
+    "dir_area  = '/Data/forest_area/'\n",
+    "dir_ctrs  = '/Data/data_ancillary/info_countries/'\n",
+    "dir_grid  = '/Data/ELUC_countries/'\n",
+    "dir_tmp   = '/Data/tmp/'\n"
    ]
   },
   {
@@ -50,11 +50,6 @@
     "data_IPCC_codes = pd.read_excel(fname_IPCC_codes, sheet_name='region_classification', header=0, usecols=[0, 1, 3])\n",
     "data_alph_num   = pd.read_excel(fname_ISO_num, header=0)\n",
     "\n",
-    "#Regrid country ISO code to model grid\n",
-    "file_grid      = dir_grid + 'grid_xy_BLUE'\n",
-    "fname_ctrs_reg = dir_tmp + 'wrld_cntrs_BLUE_TN_upd_on_BLUE_grid.nc'\n",
-    "os.system('cdo remaplaf,' + file_grid + ' ' + fname_ctrs_ISO + ' ' + fname_ctrs_reg)\n",
-    "\n",
     "#Define sources, sinks, and net\n",
     "selections = ['primary', 'secondary']\n",
     "\n",
@@ -78,8 +73,8 @@
     "        #Select time\n",
     "        data_area = data_area.sel(time=slice(time_sta, time_end))\n",
     "\n",
-    "        #Read regridded data\n",
-    "        data_ctrs_ISO = xr.open_dataset(fname_ctrs_reg)\n",
+    "        #Read country data\n",
+    "        data_ctrs_ISO = xr.open_dataset(fname_ctrs_ISO)\n",
     "\n",
     "        #Get lat and lon names\n",
     "        if 'latitude' in data_area.dims:  lat_name, lon_name = 'latitude', 'longitude'\n",
@@ -122,10 +117,7 @@
     "        AREA_ctrs_df = AREA_ctrs_df.rename_axis('unit: Tg C/year')\n",
     "\n",
     "        #Create sheet in xlsx for every model and store country data\n",
-    "        AREA_ctrs_df.to_excel(writer, sheet_name=selection + '_forest', index=True, header=True, float_format='%.6f')\n",
-    "\n",
-    "#Remove temporarily regridded file with ISO country codes\n",
-    "os.remove(fname_ctrs_reg)\n"
+    "        AREA_ctrs_df.to_excel(writer, sheet_name=selection + '_forest', index=True, header=True, float_format='%.6f')\n"
    ]
   },
   {
